update the HTML curriculum

--- a/html/cv.html
+++ b/html/cv.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Curriculum vitae" content="Curriculum vitae of Marlon Romanelli">
+    <meta name="author" content="Marlon Romanelli">
     <title>Marlon Romanelli Curriculum</title>
 </head>
 <body>
     <h1>Curriculum vitae</h1>
     <hr>
     <p><u><b>Nome:</b></u> Marlon Augusto Romanelli</p>
-    <p><u><b>Objectives:</b></u> Front-end Programmer</p>
+    <p><u><b>Objective:</b></u> Front-end Programmer</p>
     <hr>
-    <h1>Professional Qualifications</h1>
+    <h2>Professional Qualifications</h2>
     <p><ul>
         <li>Windows</li>
         <li>Linux</li>
         <li>Internet Protocols</li>
         <li>HTML</li>
         <li>CSS</li>
+        <li>Javascript</li>
     </ul></p>
     <br><p><a href="https://github.com/Reimanel" target="_blank">View my portfolio here!</a></p>
 </body>
