change 'Programmer' to 'Developer'

--- a/html/cv.html
+++ b/html/cv.html
@@ -11,7 +11,7 @@
     <h1>Curriculum vitae</h1>
     <hr>
     <p><u><b>Nome:</b></u> Marlon Augusto Romanelli</p>
-    <p><u><b>Objective:</b></u> Front-end Programmer</p>
+    <p><u><b>Objective:</b></u> Front-end Developer</p>
     <hr>
     <h2>Professional Qualifications</h2>
     <p><ul>
